@@ -1,5 +1,8 @@
 2011-02-28  Michael Snyder  <msnyder@vmware.com>
 
+	* eval.c (evaluate_subexp_standard): Delete unused variable,
+	and discard unused values.
+
 	* infcmd.c (_initialize_infcmd): Discard unused values.
 
 	* stabsread.c (rs6000_builtin_type): Missing break statement.
